fixed profile badges alignment

--- a/src/InfoGoal/KickerBundle/Resources/public/scss/Badges/badges.scss
+++ b/src/InfoGoal/KickerBundle/Resources/public/scss/Badges/badges.scss
@@ -26,7 +26,7 @@ body {
       float: left;
 
       img {
-        min-width: 64px;
+        min-width: 65px;
         max-width: 84px;
         margin-bottom: 10px;
       }
