--- a/src/InfoGoal/KickerBundle/Resources/public/scss/Profile/badges.scss
+++ b/src/InfoGoal/KickerBundle/Resources/public/scss/Profile/badges.scss
@@ -10,7 +10,7 @@
     }
     .badge-img {
       img {
-        max-width: 64px;
+        max-width: 65px;
       }
     }
   }
